# mlops-demo

./: .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml  setup.py
prompts/: recommend.txt
src/: app.py  evaluate.py  generate.py
src/api/: main.py
tests/: test_app.py  test_generate.py
