[project]
name = "mlops-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Boyd BigData RPG",email = "sorratat.s@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "dvc (>=3.59.1,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
