[project]
name = "mlops-demo"
version = "0.1.0"
description = "Prompt-driven RPG recommender with full MLOps pipeline"
authors = [
    {name = "Boyd BigData RPG",email = "sorratat.s@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"


[tool.poetry.dependencies]
wandb = "^0.19.10"
dvc = "^3.59.1"
flask = "^3.1.0"
openai = "^1.75.0"
pandas = "^2.2.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^22.3"
flake8 = "^4.0"
isort = "^5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
